Form control wrapper component implemented

--- a/src/app/features/auth/components/login-form/login-form.component.html
+++ b/src/app/features/auth/components/login-form/login-form.component.html
@@ -4,33 +4,54 @@
   (keydown.enter)="onEnterKeydown()"
   class="flex flex-col gap-4"
 >
-  <div class="form-control">
-    <label>Username</label>
+  <app-form-control label="Username">
     <input
       appFormControl
       type="text"
       placeholder="Username"
       [formControl]="usernameCtrl"
     />
+  </app-form-control>
 
-    @if (usernameCtrl.dirty && usernameErrors(); as errors) {
-      <p class="control-errors">{{ errors | json }}</p>
-    }
-  </div>
-
-  <div class="form-control">
-    <label>Password</label>
+  <app-form-control label="Password">
     <input
       appFormControl
       type="password"
       placeholder="Password"
       [formControl]="passwordCtrl"
     />
+  </app-form-control>
 
-    @if (passwordCtrl.dirty && passwordErrors(); as errors) {
-      <p class="control-errors">{{ errors | json }}</p>
-    }
-  </div>
+  <!--  <div class="form-control">-->
+  <!--    <label>Username</label>-->
+  <!--    <input-->
+  <!--      appFormControl-->
+  <!--      type="text"-->
+  <!--      placeholder="Username"-->
+  <!--      [formControl]="usernameCtrl"-->
+  <!--    />-->
+
+  <!--    @if (-->
+  <!--      (usernameCtrl.dirty || !usernameCtrl.untouched) && usernameErrors();-->
+  <!--      as errors-->
+  <!--    ) {-->
+  <!--      <p class="control-errors">{{ errors | json }}</p>-->
+  <!--    }-->
+  <!--  </div>-->
+
+  <!--  <div class="form-control">-->
+  <!--    <label>Password</label>-->
+  <!--    <input-->
+  <!--      appFormControl-->
+  <!--      type="password"-->
+  <!--      placeholder="Password"-->
+  <!--      [formControl]="passwordCtrl"-->
+  <!--    />-->
+
+  <!--    @if (passwordCtrl.dirty && passwordErrors(); as errors) {-->
+  <!--      <p class="control-errors">{{ errors | json }}</p>-->
+  <!--    }-->
+  <!--  </div>-->
 
   @if (showSubmitButton()) {
     <button
