--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,10 @@ body {
   @apply border-red-300 focus:ring-red-200;
 }
 
+.app-form-control[disabled] {
+  @apply opacity-50;
+}
+
 /* Pretty scrollbars */
 html, html * {
   @apply scrollbar-track-gray-200 scrollbar-thumb-gray-400;
