--- a/src/app/shared/layouts/main-layout/main-layout.component.html
+++ b/src/app/shared/layouts/main-layout/main-layout.component.html
@@ -37,14 +37,7 @@
         </a>
       </div>
 
-      <a
-        [routerLink]="SIGN_IN_LINK"
-        routerLinkActive="active"
-        class="menu-link"
-        [title]="SIGN_IN_LABEL | transloco"
-      >
-        {{ SIGN_IN_LABEL | transloco }}
-      </a>
+      <app-user-signing class="flex"></app-user-signing>
     </div>
   </div>
 </header>
