IsGuest & IsUserLoggedIn directives

--- a/src/app/shared/layouts/main-layout/main-layout.component.html
+++ b/src/app/shared/layouts/main-layout/main-layout.component.html
@@ -19,6 +19,7 @@
         </a>
 
         <a
+          *appIsUserLoggedIn
           [routerLink]="FAVORITES_LINK"
           routerLinkActive="active"
           class="menu-link"
@@ -28,6 +29,7 @@
         </a>
 
         <a
+          *appIsUserLoggedIn
           [routerLink]="WISHLIST_LINK"
           routerLinkActive="active"
           class="menu-link"
